--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -1,8 +1,26 @@
-Nav {
+nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 20px;
-    background: linear-gradient(35deg, teal 50%, black 90%);
+    background: linear-gradient(35deg, teal 40%, black 90%);
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+nav h1 {
+    font-weight: 900;
+    font-size: 2rem;
+}
+
+nav div button {
+    margin: 5px;
+    font-size: 1.5rem;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    background: none;
+    border: none;
+    color: white;
+    /* border-bottom: 8px solid white; */
+    /* border-radius: 10px; */
+    font-weight: 900;
 }
 
