--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -30,8 +30,9 @@
     background: white;
     border: 2px  solid #000;
     border-radius: 12px;
-    opacity: .85;
+    opacity: .75;
     padding: 5px 10px;
+    font-size: 1.5rem;
 }
 
 /* .application:first-child {
