--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -4,28 +4,55 @@
     padding: 10px;
 }
 
-input, #submit-btn {
+/* label {
+    float:left;
+} */
+
+input {
     width: 60%;
     height: 50px;
     border-style: inset;
     border-color: black;
-    border-width: 3px;
+    border-width: 1.5px;
+    padding: 5px 5px;
+    margin: 8px 0;
+    display: inline-block;
+    box-sizing: border-box;
+    border-radius: 3px;
 }
 
 #message-box {
+    width: 60%;
     height: 150px;
-}
-
-#submit-btn {
-    border-style: outset;
+    border-style: inset;
+    border-color: black;
+    border-width: 1.5px;
+    padding: 5px 5px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border-radius: 3px;
 }
 
 #contact-me {
     padding-top: 100px;
 }
 
+input[type=submit] {
+    background-color: #CD7F32;
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-decoration:solid;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
 span {
     position: absolute;
     font-size: 1.25rem;
     color: red;
+}
+
+form {
+    transition: opacity 1s;
 }
