--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -16,6 +16,12 @@
     border-radius: 12px;
 }
 
+/* @media (min-width: 500px) {
+    .application {
+        background-color: pink;
+    }
+  } */
+
 .application img {
     border-radius: 12px;
     width: 100%;
@@ -26,13 +32,19 @@
     position: absolute;
     bottom: 10px;
     left: 10px;
-    max-width: 50;
+    max-width: 50%;
+    max-height: 50%;
+    overflow: scroll;
     background: white;
     border: 2px  solid #000;
     border-radius: 12px;
     opacity: .75;
     padding: 5px 10px;
     font-size: 1.5rem;
+}
+
+.description p {
+    font-size: 1rem;
 }
 
 /* .application:first-child {
