--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,3 +1,9 @@
+#contact-pg {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 #contact-form {
     font-family: 'Times New Roman', Times, serif;
     flex-direction: column;
@@ -19,6 +25,7 @@ input {
     display: inline-block;
     box-sizing: border-box;
     border-radius: 3px;
+    font-size: 1.25rem;
 }
 
 #message-box {
@@ -31,10 +38,12 @@ input {
     margin: 8px 0;
     box-sizing: border-box;
     border-radius: 3px;
+    font-size: 1.25rem;
 }
 
 #contact-me {
     padding-top: 100px;
+    color: white;
 }
 
 input[type=submit] {
@@ -45,6 +54,7 @@ input[type=submit] {
     text-decoration:solid;
     margin: 4px 2px;
     cursor: pointer;
+    font-size: 1.25rem;
 }
 
 span {
